Fix button overflow

--- a/ckanext/saeoss/assets/css/saeoss.css
+++ b/ckanext/saeoss/assets/css/saeoss.css
@@ -1295,3 +1295,15 @@ select[id$="field-dataset_custodian"]{
   overflow: hidden;
   position: absolute;
 }
+
+@media screen and (max-width: 1000px) {
+  .resizing {
+    font-size: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .resizing {
+    font-size: 14px;
+  }
+}
